# LearnOpenGL

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  main.cpp
GLAD/src/: glad.c
inc/: IndexBuffer.hpp  Input.hpp  Input.inl  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
inc/Renderer/: Camera.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBufferLayout.hpp
inc/Renderer/GPU/: IndexBuffer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
res/shaders/: basic.frag  basic.vert  basic_light.frag
src/: IndexBuffer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  main.cpp
src/Renderer/: Camera.cpp  IndexBuffer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
src/Renderer/GPU/: IndexBuffer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
